#pragma once

class ExportedModule{
};