#pragma once

class ImguiHandler
{
public:
	/**
	 * @brief Initializes the ImGui handler.
	 * @return 0 if the handler was initialized successfully.
	 */
	int initialize();

private:
};
